[project]
name = "spectral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.3.0",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = ["ruff>=0.12.0"]


[tool.pyright]
venvPath = "."
venv = ".venv"
